WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79693
REGRESSION (
r108112
): AWS Management Console at amazon.com fails to initialize
https://bugs.webkit.org/show_bug.cgi?id=79693
Summary
REGRESSION (r108112): AWS Management Console at amazon.com fails to initialize
Oliver Hunt
Reported
2012-02-27 12:10:43 PST
REGRESSION (
r108112
): AWS Management Console at amazon.com fails to initialize
Attachments
Patch
(4.68 KB, patch)
2012-02-27 12:14 PST
,
Oliver Hunt
fpizlo
: review+
webkit-ews
: commit-queue-
Details
Formatted Diff
Diff
Patch
(1.10 KB, patch)
2012-02-27 15:15 PST
,
Rafael Brandao
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2012-02-27 12:14:04 PST
Created
attachment 129084
[details]
Patch
Filip Pizlo
Comment 2
2012-02-27 12:16:41 PST
Comment on
attachment 129084
[details]
Patch Boooo!!!!
Early Warning System Bot
Comment 3
2012-02-27 12:19:22 PST
Comment on
attachment 129084
[details]
Patch
Attachment 129084
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/11642147
Gyuyoung Kim
Comment 4
2012-02-27 12:25:34 PST
Comment on
attachment 129084
[details]
Patch
Attachment 129084
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/11642148
Oliver Hunt
Comment 5
2012-02-27 13:38:20 PST
Committed
r109021
: <
http://trac.webkit.org/changeset/109021
>
Rafael Brandao
Comment 6
2012-02-27 15:15:25 PST
Reopening to attach new patch.
Rafael Brandao
Comment 7
2012-02-27 15:15:29 PST
Created
attachment 129108
[details]
Patch This is a build fix for qt and probably for other platforms.
Mahesh Kulkarni
Comment 8
2012-02-27 16:29:03 PST
Oliver, Rafael, opps I committed build break issue with
http://trac.webkit.org/changeset/109034
. Please remove your patch from commit queue.
Mahesh Kulkarni
Comment 9
2012-02-27 16:41:04 PST
Comment on
attachment 129108
[details]
Patch removing from commit queue as the patch is landed. Sorry I missed to check this bug before committing.
Rafael Brandao
Comment 10
2012-02-27 18:57:46 PST
(In reply to
comment #9
)
> (From update of
attachment 129108
[details]
) > removing from commit queue as the patch is landed. Sorry I missed to check this bug before committing.
No problem, I'm glad the issue is fixed. :-) Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug