REGRESSION (r108112): AWS Management Console at amazon.com fails to initialize https://bugs.webkit.org/show_bug.cgi?id=79693

Reviewed by Filip Pizlo.

Source/JavaScriptCore:

Alas we can't provide the stack trace as an array, as despite everyone wanting
an array, everyone arbitrarily creates the array by calling split on the stack
trace.  To create the array we would have provided them in the first place.

This changes the exception's stack property to a \n separated string.  To get the
old array just do <exception>.stack.split("\n").

* runtime/Error.cpp:
(JSC::addErrorInfo):

LayoutTests:

Update test case to handle Error.stack being a string rather than an array.

* fast/js/script-tests/stack-trace.js:
(printStack):

git-svn-id: svn://svn.chromium.org/blink/trunk@109021 bbb929c8-8fbe-4397-9dbb-9b2b20218538